--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,9 +11,7 @@
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
     <div>
         <a class="btn btn-lg btn-primary btn-sm" href="/stores/new">매장 추가</a>
-        <a class="btn btn-lg btn-success btn-sm" href="/">오너 추가</a>
-        <a class="btn btn-lg btn-success btn-sm" href="/">오너 목록</a>
-        <a class="btn btn-lg btn-secondary btn-sm" href="/">로그 아웃</a>
+        <a class="btn btn-lg btn-secondary btn-sm" href="/login">로그 아웃</a>
         <table class="table table-striped">
             <thead>
             <tr>
