--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -23,12 +23,16 @@
         <h2>로그인</h2>
     </div>
 
+
     <form id="login-form" th:action th:object="${loginDto}" method="post">
 
         <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
         </div>
 
+        <tr th:each="errorMessage : ${errorMessage}">
+            <td th:text="${errorMessage.errorMessage}"></td>
+        </tr>
         <div>
             <label for="email">로그인 ID</label>
             <input type="text" id="email" th:field="*{email}" class="form-control"
