feat : web item repository connect ing

--- a/src/main/resources/templates/items/createItem.html
+++ b/src/main/resources/templates/items/createItem.html
@@ -39,12 +39,13 @@
       <select class="selectpicker">
         <option th:each="val : ${status}"
                 th:value="${val}"
+
                 th:utext="${val.toString()}"></option>
       </select>
     </div>
 
 
-    <button type="submit" class="btn btn-primary">매장 등록</button>
+    <button type="submit" class="btn btn-primary">메뉴 등록</button>
 
   </form>
   <br/>
