--- a/src/main/resources/templates/items/createItem.html
+++ b/src/main/resources/templates/items/createItem.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div th:replace="fragments/bodyHeader :: bodyHeader"/>
 
-  <form role="form" action="/stores/new" th:object="${itemForm}"
+  <form role="form" th:action="@{/items/new(storeId=${storeId})}" th:object="${itemForm}"
         method="post">
     <div class="form-group">
       <label th:for="storeName">메뉴명</label>
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group">
       <label th:for="branch">카테고리</label>
-      <select class="selectpicker">
+      <select class="selectpicker" th:name="categoryId">
         <option th:each="category : ${categories}"
                 th:value="${category.getId()}"
                 th:utext="${category.getCategoryName()}"></option>
